--- a/Football_Scores-master/app/src/main/res/layout/score_widget.xml
+++ b/Football_Scores-master/app/src/main/res/layout/score_widget.xml
@@ -2,55 +2,55 @@
     android:id="@+id/widget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
+    android:background="@color/orange01"
     android:padding="@dimen/widget_margin">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:weightSum="3">
+        android:weightSum="5">
 
         <TextView
             android:id="@+id/home_name_widget"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_weight="2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:background="#09C"
+            android:background="@color/orange01"
             android:gravity="center"
-            android:text="@string/appwidget_text"
             android:textColor="#ffffff"
-            android:textSize="24sp"
+            android:text="@string/loading_widget"
+            android:textSize="20sp"
             android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/score_widget"
             android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:background="#09C"
+            android:background="@color/orange01"
             android:gravity="center"
-            android:text="@string/appwidget_text"
             android:textColor="#ffffff"
-            android:textSize="24sp"
+            android:textSize="28sp"
             android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/away_name_widget"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_weight="2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:background="#09C"
+            android:background="@color/orange01"
             android:gravity="center"
-            android:text="@string/appwidget_text"
             android:textColor="#ffffff"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold|italic" />
     </LinearLayout>
+
 
 </RelativeLayout>
