--- a/Football_Scores-master/app/src/main/res/layout/fragment_main.xml
+++ b/Football_Scores-master/app/src/main/res/layout/fragment_main.xml
@@ -4,6 +4,10 @@
     android:layout_marginLeft="@dimen/list_horizonal_matgin"
     android:layout_marginRight="@dimen/list_horizonal_matgin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment">
